--- a/ahn/src/main/resources/application.properties
+++ b/ahn/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.mysql.main.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.mysql.main.jdbc-url=jdbc:mysql://localhost:3306/ahn?zeroDateTimeBehavior=convertToNull
 
 spring.datasource.mysql.main.username=root
-spring.datasource.mysql.main.password=ahn1234
+spring.datasource.mysql.main.password=asd475881@
