--- a/ahn/src/main/resources/application.properties
+++ b/ahn/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=ahn
+spring.profiles.include=external
 
 # Mysql.main
 #spring.datasource.mysql.main.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.mysql.main.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.mysql.main.jdbc-url=jdbc:mysql://localhost:3306/ahn?zeroDateTimeBehavior=convertToNull
+spring.datasource.mysql.main.jdbc-url=${mysql_main_jdbc_url}
 
-spring.datasource.mysql.main.username=root
-spring.datasource.mysql.main.password=asd475881@
+spring.datasource.mysql.main.username=${mysql_main_username}
+spring.datasource.mysql.main.password=${mysql_main_password}
+
+
