--- a/ahn/src/main/resources/application.properties
+++ b/ahn/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.profiles.include=external
 
 # Mysql.main
 #spring.datasource.mysql.main.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.mysql.main.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.mysql.main.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.mysql.main.jdbc-url=${mysql_main_jdbc_url}
 
 spring.datasource.mysql.main.username=${mysql_main_username}
